--- a/trainingapp/pom.xml
+++ b/trainingapp/pom.xml
@@ -61,7 +61,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		
 		<dependency>
     		<groupId>org.webjars</groupId>
     		<artifactId>bootstrap</artifactId>
@@ -76,6 +75,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.mapstruct</groupId>
+    		<artifactId>mapstruct-processor</artifactId>
+    		<version>1.5.5.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.5.Final</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 
 	</dependencies>
