--- a/trainingapp/src/main/resources/application.properties
+++ b/trainingapp/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/workoutdb
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 # Hibrtnate
