--- a/trainingapp/pom.xml
+++ b/trainingapp/pom.xml
@@ -96,6 +96,20 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>fullcalendar</artifactId>
+			<version>6.1.14</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
